--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
         <!-- preload -->
         <link rel="stylesheet" type="text/css" href="assets/css/loaders.min.css">
         <link rel="stylesheet" type="text/css" href="assets/css/index.css">
+        <script src="assets\js\jquery-2.2.4.min.js"></script>
+
         <!--[if lt IE 9]>
         <script src="assets/js/html5shiv.min.js"></script>
         <script src="assets/js/respond.min.js"></script>
@@ -112,11 +114,11 @@
                                     </select>
                                 </div>
                             </div>
-                            <!-- <button class="wheel-btn send btn btn-success send" id="psan">Pesan</button>
-                            </label> -->
-                            <div class="form-group button-area">
+                            <button class="wheel-btn send btn btn-success send" id="psan">Pesan</button>
+                            </label>
+                            <!-- <div class="form-group button-area">
                                 <button class="btn btn-success send">Pesan via WhatsApp</button>
-                            </div>
+                            </div> -->
                         </form>
                     </div>
                 </div>
