--- a/index.html
+++ b/index.html
@@ -3769,7 +3769,7 @@
                                                 <source media="(min-width: 769px) and (max-width: 1024px)"
                                                     srcset="m2-removebg-preview.png" />
                                                 <source media="(min-width: 1025px)"
-                                                    srcset="https://lh3.googleusercontent.com/p/AF1QipMnzLn4IvB1KGYLRdTAHDv4H2spAqKWOYtcdrek=s1280-p-no-v1" />
+                                                    srcset="m2-removebg-preview.png" />
                                                 <img class="aWQIEc post-photo"
                                                     src="m2-removebg-preview.png" />
                                             </picture>
