--- a/index.html
+++ b/index.html
@@ -2417,7 +2417,8 @@
         .PE7lZb {
             margin: 0;
             overflow: hidden;
-            text-overflow: ellipsis
+            text-overflow: ellipsis;
+            font-size: 50px;
         }
 
         .KbhWjc {
@@ -3770,7 +3771,7 @@
                                         </a></div>
                                     <div class="NHc3Rd"><a class="QBP2Td oYxtQd post-date"
                                             href="posts/73004545945317472000cf2.html?hl=id" style="font-size: 50px;">Avanza</a>
-                                        <div class="bGQFnc">
+                                        <div class="bGQFnc" style="font-size: 30px;">
                                            <p class="PE7lZb"><li><b>Reguler</b> Bandung Bandara Soekarno Hatta Rp.250.000</li></p>
 
                                             <p class="PE7lZb"><li><b>Droop Off</b> Bandung Bandara Soekarno Hatta Rp.800.000</li></p>
@@ -3795,7 +3796,7 @@
                                         </a></div>
                                     <div class="NHc3Rd"><a class="QBP2Td oYxtQd post-date"
                                             href="posts/11078838610684998440cf2.html?hl=id" style="font-size: 50px;">TOYOTA HAICE</a>
-                                        <div class="bGQFnc">
+                                        <div class="bGQFnc"  style="font-size: 30px;">
                                             <p class="PE7lZb"><li><b>Reguler</b> Bandung Bandara Soekarno Hatta Rp.250.000</li></p>
 
                                             <p class="PE7lZb"><li><b>Droop Off</b> Bandung Bandara Soekarno Hatta Rp.1.500.000</li></p>
@@ -3820,7 +3821,7 @@
                                         </a></div>
                                     <div class="NHc3Rd"><a class="QBP2Td oYxtQd post-date"
                                             href="posts/84031439601001037980cf2.html?hl=id" style="font-size: 50px;">INNOVA</a>
-                                        <div class="bGQFnc">
+                                        <div class="bGQFnc"  style="font-size: 30px;">
                                             <p class="PE7lZb"><li><b>Reguler</b> Bandung Bandara Soekarno Hatta Rp.250.000</li></p>
 
                                             <p class="PE7lZb"><li><b>Droop Off</b> Bandung Bandara Soekarno Hatta Rp.1.100.000</li></p>
