--- a/index.html
+++ b/index.html
@@ -3771,7 +3771,7 @@
                                         </a></div>
                                     <div class="NHc3Rd"><a class="QBP2Td oYxtQd post-date"
                                             href="posts/73004545945317472000cf2.html?hl=id" style="font-size: 50px;">Avanza</a>
-                                        <div class="bGQFnc" style="font-size: 30px;">
+                                        <div class="bGQFnc" style="font-size: 25px;word-spacing:9px;">
                                            <p class="PE7lZb"><li><b>Reguler</b> Bandung Bandara Soekarno Hatta Rp.250.000</li></p>
 
                                             <p class="PE7lZb"><li><b>Droop Off</b> Bandung Bandara Soekarno Hatta Rp.800.000</li></p>
@@ -3796,7 +3796,7 @@
                                         </a></div>
                                     <div class="NHc3Rd"><a class="QBP2Td oYxtQd post-date"
                                             href="posts/11078838610684998440cf2.html?hl=id" style="font-size: 50px;">TOYOTA HAICE</a>
-                                        <div class="bGQFnc"  style="font-size: 30px;">
+                                        <div class="bGQFnc"  style="font-size: 25px;">
                                             <p class="PE7lZb"><li><b>Reguler</b> Bandung Bandara Soekarno Hatta Rp.250.000</li></p>
 
                                             <p class="PE7lZb"><li><b>Droop Off</b> Bandung Bandara Soekarno Hatta Rp.1.500.000</li></p>
@@ -3821,7 +3821,7 @@
                                         </a></div>
                                     <div class="NHc3Rd"><a class="QBP2Td oYxtQd post-date"
                                             href="posts/84031439601001037980cf2.html?hl=id" style="font-size: 50px;">INNOVA</a>
-                                        <div class="bGQFnc"  style="font-size: 30px;">
+                                        <div class="bGQFnc"  style="font-size: 25px;">
                                             <p class="PE7lZb"><li><b>Reguler</b> Bandung Bandara Soekarno Hatta Rp.250.000</li></p>
 
                                             <p class="PE7lZb"><li><b>Droop Off</b> Bandung Bandara Soekarno Hatta Rp.1.100.000</li></p>
