--- a/index.html
+++ b/index.html
@@ -2414,11 +2414,12 @@
             margin-bottom: 30px
         }
 
-        .PE7lZb {
+        .PE7lZb li {
             margin: 0;
             overflow: hidden;
             text-overflow: ellipsis;
             font-size: 50px;
+
         }
 
         .KbhWjc {
@@ -3772,9 +3773,10 @@
                                     <div class="NHc3Rd"><a class="QBP2Td oYxtQd post-date"
                                             href="posts/73004545945317472000cf2.html?hl=id" style="font-size: 50px;">Avanza</a>
                                         <div class="bGQFnc" style="font-size: 25px;word-spacing:9px;">
-                                           <p class="PE7lZb"><li><b>Reguler</b> Bandung Bandara Soekarno Hatta Rp.250.000</li></p>
+                                            <br>
+                                           <p class="PE7lZb"><li style="word-spacing:10px;line-height:35px;"><b>Reguler</b> Bandung Bandara Soekarno Hatta Rp.250.000</li></p>
 
-                                            <p class="PE7lZb"><li><b>Droop Off</b> Bandung Bandara Soekarno Hatta Rp.800.000</li></p>
+                                            <p class="PE7lZb" style="word-spacing:10px;line-height:35px;"><li><b>Droop Off</b> Bandung Bandara Soekarno Hatta Rp.800.000</li></p>
                                         </div>
                                     </div><a data-tracking-element-type="25" href="https://wa.me/6281212133696"
                                         class="PDllHc post-cta" style="font-size: 20px;">Pesan online</a>
@@ -3797,9 +3799,10 @@
                                     <div class="NHc3Rd"><a class="QBP2Td oYxtQd post-date"
                                             href="posts/11078838610684998440cf2.html?hl=id" style="font-size: 50px;">TOYOTA HAICE</a>
                                         <div class="bGQFnc"  style="font-size: 25px;">
-                                            <p class="PE7lZb"><li><b>Reguler</b> Bandung Bandara Soekarno Hatta Rp.250.000</li></p>
+                                            <br>
+                                            <p class="PE7lZb"><li style="word-spacing:10px;line-height:35px;"><b>Reguler</b> Bandung Bandara Soekarno Hatta Rp.250.000</li></p>
 
-                                            <p class="PE7lZb"><li><b>Droop Off</b> Bandung Bandara Soekarno Hatta Rp.1.500.000</li></p>
+                                            <p class="PE7lZb"><li style="word-spacing:10px;line-height:35px;"><b>Droop Off</b> Bandung Bandara Soekarno Hatta Rp.1.500.000</li></p>
                                         </div>
                                     </div><a data-tracking-element-type="25" href="https://wa.me/6281212133696"
                                         class="PDllHc post-cta" style="font-size: 20px;">Pesan online</a>
@@ -3822,9 +3825,10 @@
                                     <div class="NHc3Rd"><a class="QBP2Td oYxtQd post-date"
                                             href="posts/84031439601001037980cf2.html?hl=id" style="font-size: 50px;">INNOVA</a>
                                         <div class="bGQFnc"  style="font-size: 25px;">
-                                            <p class="PE7lZb"><li><b>Reguler</b> Bandung Bandara Soekarno Hatta Rp.250.000</li></p>
+                                            <br>
+                                            <p class="PE7lZb"><li  style="word-spacing:10px;line-height:35px;"><b>Reguler</b> Bandung Bandara Soekarno Hatta Rp.250.000</li></p>
 
-                                            <p class="PE7lZb"><li><b>Droop Off</b> Bandung Bandara Soekarno Hatta Rp.1.100.000</li></p>
+                                            <p class="PE7lZb"><li style="word-spacing:10px;line-height:35px;"><b>Droop Off</b> Bandung Bandara Soekarno Hatta Rp.1.100.000</li></p>
                                         </div>
                                     </div><a data-tracking-element-type="25" href="https://wa.me/6281212133696"
                                         class="PDllHc post-cta" style="font-size: 20px;">Pesan online</a>
